--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,26 @@
-theme: jekyll-theme-cayman
+plugins:
+  - jekyll-seo-tag
+  
+collections:
+  catalog:
+    output: true
+
+social:
+  name: Veshi
+  links:
+    - https://www.facebook.com/a510ru
+    - http://instagram.com/a510ru
+    - https://plus.google.com/111533556890655071026
+
+logo: /images/logo2.svg
+url:
+
+title: ""
+lang: "ru_RU"
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      image: /images/banners/dupleksy.jpg
